fix z-indexing

--- a/src/components/SpSystemTray/SpSystemTray.css
+++ b/src/components/SpSystemTray/SpSystemTray.css
@@ -1,4 +1,5 @@
 .system-tray {
+  z-index: 10;
   display: flex;
   height: 2.5rem;
   margin-top: var(--icon-scale-margin);
